# YRpp

./: ASMMacros.h  AbstractClass.h  AircraftClass.h  ArrayClasses.h  BasicStructures.h  BuildingClass.h  CCINIClass.h  CMakeLists.txt  CellClass.h  Dir.h  Drawing.h  DriveLocomotionClass.h  EventClass.h  FootClass.h  GScreenClass.h  GameStrings.h  GeneralDefinitions.h  HouseClass.h  HouseTypeClass.h  IndexClass.h  Interfaces.h  JumpjetLocomotionClass.h  LocomotionClass.h  MPGameModeClass.h  MapClass.h  Matrix3D.h  Memory.h  MissionClass.h  ObjectClass.h  PacketClass.h  Pipes.h  RulesClass.h  SessionClass.h  Straws.h  Syringe.h  TacticalClass.h  TargetClass.h  TechnoClass.h  TechnoTypeClass.h  Timer.h  (+8 more)
Blitters/: BlitPlainXlat.h  BlitPlainXlatAlpha.h  BlitPlainXlatZRead.h  BlitPlainXlatZReadWrite.h  BlitTransDarken.h  BlitTransDarkenZRead.h  BlitTransDarkenZReadWrite.h  BlitTransLucent25.h  BlitTransLucent25Alpha.h  BlitTransLucent25ZRead.h  BlitTransLucent25ZReadWarp.h  BlitTransLucent25ZReadWrite.h  BlitTransLucent50.h  BlitTransLucent50Alpha.h  BlitTransLucent50ZRead.h  BlitTransLucent50ZReadWarp.h  BlitTransLucent50ZReadWrite.h  BlitTransLucent75.h  BlitTransLucent75Alpha.h  BlitTransLucent75ZRead.h  BlitTransLucent75ZReadWarp.h  BlitTransLucent75ZReadWrite.h  BlitTransRemapDest.h  BlitTransRemapXlat.h  BlitTransXlat.h  BlitTransXlatAlpha.h  BlitTransXlatAlphaZReadWrite.h  BlitTransXlatMultWriteAlpha.h  BlitTransXlatWriteAlpha.h  BlitTransXlatZRead.h  BlitTransXlatZReadWrite.h  BlitTransZRemapXlat.h  BlitTransZRemapXlatAlpha.h  BlitTransZRemapXlatZRead.h  BlitTransZRemapXlatZReadWrite.h  BlitTranslucent50NonzeroAlpha.h  BlitTranslucent50ZeroAlpha.h  BlitTranslucentWriteAlpha.h  Blitter.h  RLEBlitTransDarken.h  (+26 more)
Helpers/: CompileTime.h  Template.h
