add_library(YRpp INTERFACE
AbstractClass.h
AbstractTypeClass.h
AircraftClass.h
AircraftTypeClass.h
AirstrikeClass.h
AITriggerTypeClass.h
AlphaLightingRemapClass.h
AlphaShapeClass.h
AnimClass.h
AnimTypeClass.h
ArrayClasses.h
ASMMacros.h
Audio.h
BasicStructures.h
BitFont.h
BitText.h
Blitters/BlitPlainXlatAlpha.h
Blitters/BlitPlainXlat.h
Blitters/BlitPlainXlatZRead.h
Blitters/BlitPlainXlatZReadWrite.h
Blitters/Blitter.h
Blitters/BlitTransDarken.h
Blitters/BlitTransDarkenZRead.h
Blitters/BlitTransDarkenZReadWrite.h
Blitters/BlitTransLucent25Alpha.h
Blitters/BlitTransLucent25AlphaZRead.h
Blitters/BlitTransLucent25AlphaZReadWarp.h
Blitters/BlitTransLucent25AlphaZReadWrite.h
Blitters/BlitTransLucent25.h
Blitters/BlitTransLucent25ZRead.h
Blitters/BlitTransLucent25ZReadWarp.h
Blitters/BlitTransLucent25ZReadWrite.h
Blitters/BlitTransLucent50Alpha.h
Blitters/BlitTransLucent50AlphaZRead.h
Blitters/BlitTransLucent50AlphaZReadWarp.h
Blitters/BlitTransLucent50AlphaZReadWrite.h
Blitters/BlitTransLucent50.h
Blitters/BlitTranslucent50NonzeroAlpha.h
Blitters/BlitTranslucent50ZeroAlpha.h
Blitters/BlitTransLucent50ZRead.h
Blitters/BlitTransLucent50ZReadWarp.h
Blitters/BlitTransLucent50ZReadWrite.h
Blitters/BlitTransLucent75Alpha.h
Blitters/BlitTransLucent75AlphaZRead.h
Blitters/BlitTransLucent75AlphaZReadWarp.h
Blitters/BlitTransLucent75AlphaZReadWrite.h
Blitters/BlitTransLucent75.h
Blitters/BlitTransLucent75ZRead.h
Blitters/BlitTransLucent75ZReadWarp.h
Blitters/BlitTransLucent75ZReadWrite.h
Blitters/BlitTranslucentWriteAlpha.h
Blitters/BlitTransRemapDest.h
Blitters/BlitTransRemapXlat.h
Blitters/BlitTransXlatAlpha.h
Blitters/BlitTransXlatAlphaZRead.h
Blitters/BlitTransXlatAlphaZReadWrite.h
Blitters/BlitTransXlat.h
Blitters/BlitTransXlatMultWriteAlpha.h
Blitters/BlitTransXlatWriteAlpha.h
Blitters/BlitTransXlatZRead.h
Blitters/BlitTransXlatZReadWrite.h
Blitters/BlitTransZRemapXlatAlpha.h
Blitters/BlitTransZRemapXlatAlphaZRead.h
Blitters/BlitTransZRemapXlatAlphaZReadWrite.h
Blitters/BlitTransZRemapXlat.h
Blitters/BlitTransZRemapXlatZRead.h
Blitters/BlitTransZRemapXlatZReadWrite.h
Blitters/RLEBlitTransDarken.h
Blitters/RLEBlitTransDarkenZRead.h
Blitters/RLEBlitTransDarkenZReadWrite.h
Blitters/RLEBlitTransLucent25Alpha.h
Blitters/RLEBlitTransLucent25AlphaZRead.h
Blitters/RLEBlitTransLucent25AlphaZReadWarp.h
Blitters/RLEBlitTransLucent25AlphaZReadWrite.h
Blitters/RLEBlitTransLucent25.h
Blitters/RLEBlitTransLucent25ZRead.h
Blitters/RLEBlitTransLucent25ZReadWarp.h
Blitters/RLEBlitTransLucent25ZReadWrite.h
Blitters/RLEBlitTransLucent50Alpha.h
Blitters/RLEBlitTransLucent50AlphaZRead.h
Blitters/RLEBlitTransLucent50AlphaZReadWarp.h
Blitters/RLEBlitTransLucent50AlphaZReadWrite.h
Blitters/RLEBlitTransLucent50.h
Blitters/RLEBlitTransLucent50ZRead.h
Blitters/RLEBlitTransLucent50ZReadWarp.h
Blitters/RLEBlitTransLucent50ZReadWrite.h
Blitters/RLEBlitTransLucent75Alpha.h
Blitters/RLEBlitTransLucent75AlphaZRead.h
Blitters/RLEBlitTransLucent75AlphaZReadWarp.h
Blitters/RLEBlitTransLucent75AlphaZReadWrite.h
Blitters/RLEBlitTransLucent75.h
Blitters/RLEBlitTransLucent75ZRead.h
Blitters/RLEBlitTransLucent75ZReadWarp.h
Blitters/RLEBlitTransLucent75ZReadWrite.h
Blitters/RLEBlitTransRemapDest.h
Blitters/RLEBlitTransRemapDestZRead.h
Blitters/RLEBlitTransRemapDestZReadWrite.h
Blitters/RLEBlitTransRemapXlat.h
Blitters/RLEBlitTransRemapXlatZRead.h
Blitters/RLEBlitTransRemapXlatZReadWrite.h
Blitters/RLEBlitTransXlatAlpha.h
Blitters/RLEBlitTransXlatAlphaZRead.h
Blitters/RLEBlitTransXlatAlphaZReadWrite.h
Blitters/RLEBlitTransXlat.h
Blitters/RLEBlitTransXlatZRead.h
Blitters/RLEBlitTransXlatZReadWrite.h
Blitters/RLEBlitTransZRemapXlatAlpha.h
Blitters/RLEBlitTransZRemapXlatAlphaZRead.h
Blitters/RLEBlitTransZRemapXlatAlphaZReadWrite.h
Blitters/RLEBlitTransZRemapXlat.h
Blitters/RLEBlitTransZRemapXlatZRead.h
Blitters/RLEBlitTransZRemapXlatZReadWrite.h
BombClass.h
BombListClass.h
BounceClass.h
BuildingClass.h
BuildingLightClass.h
BuildingTypeClass.h
BulletClass.h
BulletTypeClass.h
CampaignClass.h
CaptureManagerClass.h
CCFileClass.h
CCINIClass.h
CCToolTip.h
CD.h
CellClass.h
CellSpread.h
CheckListClass.h
ColorListClass.h
ColorScheme.h
CommandClass.h
ControlClass.h
Conversions.h
ConvertClass.h
CRC.h
CRT.h
Dir.h
DiscreteDistributionClass.h
DiscreteSelectionClass.h
DiskLaserClass.h
DisplayClass.h
Drawing.h
DriveLocomotionClass.h
DropListClass.h
EBolt.h
EditClass.h
EMPulseClass.h
EvadeClass.h
EventClass.h
Facing.h
FactoryClass.h
FileFormats/HVA.h
FileFormats/_Loader.h
FileFormats/SHP.h
FileFormats/VXL.h
FileSystem.h
FlyLocomotionClass.h
FootClass.h
FPSCounter.h
Fundamentals.h
GadgetClass.h
GameClasses.h
GameModeOptionsClass.h
GameOptionsClass.h
GameStrings.h
GaugeClass.h
GeneralDefinitions.h
GeneralStructures.h
GenericList.h
GetCDClass.h
GScreenClass.h
HeapClass.h
Helpers/Cast.h
Helpers/CompileTime.h
Helpers/ComPtr.h
Helpers/Enumerators.h
Helpers/EnumFlags.h
Helpers/Iterators.h
Helpers/Macro.h
Helpers/String.h
Helpers/Template.h
HouseClass.h
HouseTypeClass.h
IndexClass.h
InfantryClass.h
InfantryTypeClass.h
InputManagerClass.h
Interfaces.h
IonBlastClass.h
Ion.h
IPX.h
IPXManagerClass.h
IsometricTileClass.h
IsometricTileTypeClass.h
JumpjetLocomotionClass.h
Kamikaze.h
LaserDrawClass.h
LightSourceClass.h
LineTrail.h
LinkClass.h
ListClass.h
LoadOptionsClass.h
LoadProgressManager.h
LocomotionClass.h
MapClass.h
MapSeedClass.h
Matrix3D.h
Memory.h
MessageBox.h
MessageListClass.h
MissionClass.h
MixFileClass.h
MouseClass.h
MPGameModeClass.h
MPTeams.h
NeuronClass.h
Notifications.h
ObjectClass.h
ObjectTypeClass.h
OverlayClass.h
OverlayTypeClass.h
PacketClass.h
ParasiteClass.h
ParticleClass.h
ParticleSystemClass.h
ParticleSystemTypeClass.h
ParticleTypeClass.h
PCX.h
Pipes.h
PlanningTokenClass.h
PowerClass.h
Powerups.h
PreviewClass.h
ProgressScreenClass.h
Quaternion.h
RadarClass.h
RadarEventClass.h
RadBeam.h
RadioClass.h
RadSiteClass.h
Randomizer.h
RocketLocomotionClass.h
RulesClass.h
ScenarioClass.h
ScriptClass.h
ScriptTypeClass.h
SessionClass.h
ShapeButtonClass.h
ShipLocomotionClass.h
SidebarClass.h
SideClass.h
SlaveManagerClass.h
SliderClass.h
SmudgeClass.h
SmudgeTypeClass.h
SpawnManagerClass.h
SpecificStructures.h
SpotlightClass.h
StageClass.h
Straws.h
StringTable.h
SuperClass.h
SuperWeaponTypeClass.h
Surface.h
SwizzleManagerClass.h
Syringe.h
TacticalClass.h
TActionClass.h
TagClass.h
TagTypeClass.h
TargetClass.h
TaskForceClass.h
TeamClass.h
TeamTypeClass.h
TechnoClass.h
TechnoTypeClass.h
TeleportLocomotionClass.h
TerrainClass.h
TerrainTypeClass.h
TEventClass.h
TextLabelClass.h
Theater.h
ThemeClass.h
TiberiumClass.h
Timer.h
ToggleClass.h
ToolTipManager.h
TransitionTimer.h
TriColorGaugeClass.h
TriggerClass.h
TriggerTypeClass.h
TunnelLocomotionClass.h
UDPInterfaceClass.h
UI.h
UnitClass.h
UnitTypeClass.h
Unsorted.h
Vault.h
VeinholeMonsterClass.h
VocClass.h
VoxClass.h
VoxelAnimClass.h
VoxelAnimTypeClass.h
VTables.h
WarheadTypeClass.h
WaveClass.h
WaypointPathClass.h
WeaponTypeClass.h
WinsockInterfaceClass.h
WOLAPIInterfaces.h
Wstring.h
WWMessageBox.h
WWMouseClass.h
YRAllocator.h
YRCom.h
YRDDraw.h
YRMath.h
YRMathVector.h
YRPPCore.h
YRPP.h
)
